--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -1,5 +1,26 @@
 {>"layouts/master" /}
 
+{<title}
+    Battle of Hashes
+{/title}
+
 {<body}
     <h1>{@pre type="content" key="greeting"/}</h1>
+    <section id="#Battle">
+         <form id="userinput" action method="post">
+
+            <label class="label" for="brand">Interested in: #</label>
+            <input type=text required id="brand" placeholder="tint">
+
+            <input class="btn btn-submit btn-primary" type="submit" value="Count, lil birdie!">
+            <input class="btn btn-submit btn-danger" type="submit" value="Lemme Add More Brands">
+        </form>
+    </section>
+
+    <section id="trending">
+        <ul class="li">Trending:
+            <li class="li no1">1.Tint</li>
+            <li class="li no2">2.Yahoo</li>
+            </ul>
+    </section>
 {/body}
