--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -10,5 +10,6 @@
     {+body /}
 </div>
 <script data-main="/js/app" src="components/requirejs/require.js"></script>
+<script src="/reload/reload.js"></script>
 </body>
 </html>
