--- a/public/css/app.less
+++ b/public/css/app.less
@@ -1,101 +1,21 @@
 @import "bootstrap-min.css";
 
-.nm-np {
-  margin: 0;
-  padding: 0;
-}
-
-.grey {
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
-ul.inline li {
-  display: inline-block;
-}
-
 body {
-  background-color: #263C81;
-  color: #F2F2F2;
   font-family: "helvetica neue", "arial", "sans";
   margin: 0 auto;
-  padding: 15px, 15px;
+  padding: 15px;
 }
 
-header {
-  margin: .5em 0;
-  padding: 0 0 .5em 0;
+label {
+    font-size: 14px !important;
+    padding-right: 5px;
 }
 
-header h1 {
-  margin: 0;
-  padding: .25em 0;
-  font-size: 1.75em;
-
+input {
+    margin: 5px;
+    padding: 10px;
 }
 
-nav li {
-  margin-right: 2em;
-}
-
-.ul {
-  float:right;
-  margin: -50px 0;
-}
-
-.ul * {
-  display: inline-block;
-  margin-left: .25em;
-}
-
-a {
-  text-decoration: none;
-  color: #00abd5;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.wrapper {
-  max-width: 980px;
-  padding: 0 1em;
-
-}
-
-.tiny {
-  font-size: .75em;
-  font-weight: lighter;
-}
-
-.mb2 {
-  margin-bottom: 2em;
-}
-
-#tentacle{
-  position: absolute;
-  height:415px;
-  width: 326px;
-  background-image: url('/img/Tentacle.png');
-  background-position: 50px 50px;
-  background-repeat: no-repeat;
-  bottom: 0px;
-  right: 0px;
-  z-index: -1;
-}
-
-:-moz-placeholder {
-  color: #cccccc !important;
-}
-
-::-moz-placeholder {
-  color: #cccccc !important;
-  opacity: 1;
-}
-
-::-webkit-input-placeholder {
-  color: #cccccc;
-}
-
-:-ms-input-placeholder {
-  color: #cccccc;
+ul{
+    display: inline;
 }
