--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -5,17 +5,28 @@
 {/title}
 
 {<body}
-    <h2>Brand Battles : Tweet Counts </h2>
-    <h3>Enter the brands</h3>
+    <h2 class="visible-sm visible-md visible-lg">Brand Battles : Tweet Counts </h2>
+    <h2 class="visible-xs">Brand Battles</h2>
+    <h3 class="hidden-xs">Enter the brands</h3>
 
     <section id="#Battle">
-         <form id="userinput" action method="post">
+         <form id="userinput" method="post">
+            <div>
+                <label class="label bg-primary" for="brand1">Interested in: #</label>
+                <input type=text required id="brand1" pattern = "[A-Za-z0-9-_]+$" x-moz-errormessage="No hashtags required!" placeholder="node">
+            </div>
 
-            <label class="label" for="brand">Interested in: #</label>
-            <input type=text required id="brand" placeholder="node">
+            <div>
+                <label class="label bg-primary" for="brand2">Interested in: #</label>
+                <input type=text required id="brand2" pattern = "[A-Za-z0-9-_]+$" x-moz-errormessage="No hashtags required!" placeholder="node">
+            </div>
 
-            <div><input class="btn btn-submit btn-primary" type="submit" value="Count, lil birdie!">
-            <input class="btn btn-submit btn-info" type="submit" value="Lemme Add More Brands"></div>
+            <div>
+                <!--If we don't at the Cross-Site Request Forgey token, this POST will be rejected-->
+                <input type="hidden" name="_csrf" value="{_csrf}">
+                <input name="count"class="btn-lg btn-submit" type="submit" value="Count, lil birdie!" formaction="/counter">
+                <!--<input name="more" class="btn-lg btn-submit" type="submit" value="Lemme Add More Brands" formaction="/">-->
+            </div>
         </form>
     </section>
 
