--- a/public/css/app.less
+++ b/public/css/app.less
@@ -4,11 +4,11 @@ body {
   font-family: "helvetica neue", "arial", "sans";
   margin: 0 auto;
   padding: 15px;
+  text-align: center;
 }
 
 label {
-    font-size: 14px !important;
-    padding-right: 5px;
+    font-size: 16px;
 }
 
 input {
