--- a/public/css/app.less
+++ b/public/css/app.less
@@ -1,21 +1,31 @@
 @import "bootstrap-min.css";
 
 body {
-  font-family: "helvetica neue", "arial", "sans";
-  margin: 0 auto;
-  padding: 15px;
-  text-align: center;
+    font-family: "helvetica neue", "arial", "sans";
+    margin: 0 auto;
+    padding: 15px;
+    text-align: center;
+    color:#B4B4B4;
+    background-color: black;
 }
-
-label {
-    font-size: 16px;
-}
-
 input {
     margin: 5px;
     padding: 10px;
+    color: rgba(39, 11, 11, 0.79);
+    font-size: 16px;
 }
-
 ul{
     display: inline;
+}
+.brandnames{
+    color:rgba(195, 79, 79, 0.66);
+}
+.bgimg{
+    background-image: url(https://g.twimg.com/Twitter_logo_blue.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+form div label {
+    font-size: 16px;
+    font-weight: 400;
 }
