--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -5,7 +5,7 @@
     <title>{+title /}</title>
     <link rel="stylesheet" href="/css/app.css" />
 </head>
-<body>
+<body class="bgimg">
 <div id="wrapper">
     {+body /}
 </div>
