--- a/public/templates/counter.dust
+++ b/public/templates/counter.dust
@@ -6,17 +6,18 @@
 
 {<body}
     <h2>Brand Battles: <span class='brandnames'>#{brand1.name} </span> v/s <span class="brandnames"> #{brand2.name}</span></h2>
-    <section id="counter">
+    <section>
             <form> <!-- action method="post"-->
-
                 <div>
                     <label class="label bg-primary">#{brand1.name} : </label>
-                    <input type=text disabled="" value={brand1.count}>
-                </div>
+                    <div class="counter">
+                        <input type=text disabled="" value={brand1.count}>
+                    </div>
 
-                <div>
                     <label class="label bg-primary">#{brand2.name} : </label>
-                    <input type=text disabled="" value={.brand2.count}>
+                    <div class="counter">
+                        <input type=text disabled="" value={.brand2.count}>
+                    </div>
                 </div>
             </form>
     </section>
