--- a/public/css/app.less
+++ b/public/css/app.less
@@ -6,7 +6,6 @@ body{
     padding: 15px;
     text-align: center;
     color:#B4B4B4;
-    background-color: black;
 }
 form div label{
     font-size: 16px;
@@ -25,8 +24,18 @@ input:disabled{
 ul{
     display: inline;
 }
+hr{
+    border : 0;
+    height : 15px;
+    /* background-color: rgba(21, 121, 45, 0.63); */
+    margin: 3px;
+    background: linear-gradient( rgb(25, 126, 25) 50%, white 100%);
+    width: 50%;
+    text-align: center;
+
+}
 .brandnames{
-    color:rgba(195, 79, 79, 0.66);
+    color:rgba(23, 22, 24, 0.66);
 }
 .bgimg{
     background-image: url(https://g.twimg.com/Twitter_logo_blue.png);
@@ -35,4 +44,15 @@ ul{
 }
 .counter{
     padding: 5px 25px 25px 25px;
+}
+.win{
+    background-color: rgba(91, 128, 35, 0.82);
+}
+.lose{
+    background-color: rgba(179, 47, 47, 0.84);
+}
+.standout{
+    font-weight: 900;
+    font-size: 2em;
+    color: #C4C918;
 }
