--- a/public/templates/counter.dust
+++ b/public/templates/counter.dust
@@ -5,20 +5,19 @@
 {/title}
 
 {<body}
-    <h2>Brand Battles: <span class='brandnames'>#{brand1.name} </span> v/s <span class="brandnames"> #{brand2.name}</span></h2>
+    <h2>Brand Battles: <span class='brandnames'>#{brand1.name} </span> <span class = "standout"> v/s  </span> <span class="brandnames"> #{brand2.name}</span></h2>
     <section>
-            <form> <!-- action method="post"-->
-                <div>
-                    <label class="label bg-primary">#{brand1.name} : </label>
-                    <div class="counter">
-                        <input type=text disabled="" value={brand1.count}>
-                    </div>
-
-                    <label class="label bg-primary">#{brand2.name} : </label>
-                    <div class="counter">
-                        <input type=text disabled="" value={.brand2.count}>
-                    </div>
-                </div>
-            </form>
+        <div id="brand1">
+            <label class="{brand1.class} label bg-primary">#{brand1.name} : </label>
+            <div class="counter">
+                <input class = {brand1.class} type=text disabled="" value={brand1.count}>
+            </div>
+        </div>
+        <div id="brand2">
+            <label class="{brand2.class} label bg-primary">#{brand2.name} : </label>
+            <div class="counter">
+                <input class={brand2.class} type=text disabled="" value={.brand2.count}>
+            </div>
+        </div>
     </section>
 {/body}
